--- a/index.html
+++ b/index.html
@@ -172,6 +172,30 @@
     #pictureReviewsGrid img {
         width:100%; height: 220px; object-fit:cover; border-radius:10px; box-shadow:0 4px 12px rgba(5,12,30,0.1);
     }
+    /* New: Office Locations */
+    .locations-section{
+        background: var(--card);
+        padding: 24px;
+        border-radius: 12px;
+        box-shadow: 0 8px 24px rgba(5,12,30,0.04);
+        margin-top: 28px;
+        text-align: center;
+    }
+    .locations-list{
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 10px;
+        flex-wrap: wrap;
+        font-weight: 700;
+        color: var(--primary);
+    }
+    .location-item:before {
+        content: "🌍";
+        margin-right: 5px;
+        color: var(--muted);
+    }
+
     
     /* Reviews + FAQ */
     .reviews{padding:30px 0}
@@ -299,6 +323,16 @@
         </div>
       </div>
     </section>
+<section class="locations-section" aria-label="Head Office Locations">
+  <h2 style="margin-top:0; margin-bottom: 5px; font-size: 20px;">Head Office in 4 locations.</h2>
+  <div class="locations-list">
+    <span class="location-item">Atlanta, USA</span>
+    <span class="location-item">Melbourne, Australia</span>
+    <span class="location-item">Birmingham, UK</span>
+    <span class="location-item">Poland</span>
+  </div>
+</section>
+
 
     <section class="section" aria-label="Picture Reviews">
       <h2 style="text-align:center; margin-bottom: 20px;">Customer Photo Reviews</h2>
