--- a/checkout.html
+++ b/checkout.html
@@ -205,7 +205,7 @@
             <div class="payment-details" id="details-BankTransfer" style="display:none;">
                 <strong>Contact Support to get payment details.</strong>
                 <p class="contact-info">
-                    Please use the **Live Chat Support** button (bottom right) or <a href="mailto:support@nassalab.com">email support@nassalab.com</a> after placing your order to receive banking details.
+                    Please use the **Live Chat Support** button (bottom right) or <a href="mailto:nassalabs02@gmail.com">email support@nassalab.com</a> after placing your order to receive banking details.
                 </p>
             </div>
           </div>
