--- a/checkout.html
+++ b/checkout.html
@@ -263,7 +263,7 @@
     <h3>✅ Order Placed!</h3>
     <p>Your order has been successfully placed.</p>
     <p id="paymentConfirmationText"></p>
-    <p>Please follow the instructions shown on the page (or scroll down) to complete your payment.</p>
+    <p>Contact Support for further details</p>
     <a href="index.html" class="btn-home">Go to Homepage</a>
   </div>
 </div>
