--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!doctype html>
 <html lang="en">
 <head>
-<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-9B36Y7KESM"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-9B36Y7KESM'); </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9B36Y7KESM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-9B36Y7KESM');
+  </script>
+
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Nassalab — Home</title>
-  <meta name="description" content="Nassalab — Premium injectables, orals, PCT, peptides, SARMs and HGH. Discreet shipping, multiple payment options.">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- SEO Title -->
+  <title>Nassa Labs | Performance Supplements, Peptides & Research Products</title>
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+  <!-- SEO Meta Description -->
+  <meta name="description" content="Nassa Labs provides premium performance supplements, peptides, SARMs, PCT and research products with discreet shipping and secure checkout." />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://nassa-labs.fit/">
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     :root{
