--- a/store.html
+++ b/store.html
@@ -1,16 +1,33 @@
 <!doctype html>
 <html lang="en">
 <head>
-<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=G-9B36Y7KESM"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-9B36Y7KESM'); </script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9B36Y7KESM"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-9B36Y7KESM');
+  </script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Nassalab Store — Premium Injectables, Orals, PCT & More</title>
-  <meta name="description"
-        content="Browse Nassalab’s full product line — injectable steroids, oral steroids, SARMs, peptides and PCT. High purity, fast delivery, verified quality.">
+  <!-- SEO Title -->
+  <title>Shop Injectables, SARMs & PCT | Nassa Labs Store</title>
 
+  <!-- SEO Meta Description -->
+  <meta name="description" content="Shop premium injectables, oral compounds, SARMs, peptides and PCT from Nassa Labs. Verified quality, discreet shipping and fast delivery." />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://nassa-labs.fit/store">
+
+  <!-- Favicon (Falcon) -->
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.png" type="image/png">
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-
   <style>
     :root{
       --primary:#0A66CC;
