--- a/store.html
+++ b/store.html
@@ -314,7 +314,8 @@
 <p>
         .
       </p>
-      <h1>Shop Nassalab — High Purity Injectables, Orals & PCT</h1>
+      <h1>Shop Injectables, SARMs & Performance Products</h1>
+
       <p>
         .
 <p>
