--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ html, body {
       <button id="menuToggle" class="menu-toggle" aria-label="Toggle categories menu">☰</button>
       <div class="logo">NL</div>
       <div>
-        <div style="font-weight:700">Nassalab</div>
+        <div style="font-weight:700">Nassalabs</div>
         <div style="font-size:12px;color:var(--muted)">Nassa Labs: Home</div>
       </div>
     </div>
